@@ -1,10 +1,11 @@
 AC_INIT(betaradio, 0.1.2, Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>)
-
+AC_CONFIG_SRCDIR(src/betaradio.c)
+AM_CONFIG_HEADER(config.h)
 AM_INIT_AUTOMAKE([foreign])
 
-AM_CONFIG_HEADER(config.h)
-
 AC_PROG_CC
+AM_GNU_GETTEXT([external])
+AM_GNU_GETTEXT_VERSION(0.15)
 
 PKG_CHECK_MODULES([gtk2], [gtk+-2.0 >= 2.6],, AC_MSG_ERROR([gtk+-2.0 >= 2.6 not found]))
 PKG_CHECK_MODULES([curl], [libcurl >= 7.15],, AC_MSG_ERROR([libcurl >= 7.15 not found]))
@@ -18,10 +19,12 @@ AC_ARG_ENABLE([tv],
                esac],)
 
 AC_CONFIG_FILES([
-Makefile
-data/Makefile
-src/Makefile
-data/betaradio.desktop
-])
+                 Makefile
+                 m4/Makefile
+                 po/Makefile.in
+                 data/Makefile
+                 src/Makefile
+                 data/betaradio.desktop
+                 ])
 
 AC_OUTPUT
