@@ -1,0 +1,8 @@
+src/betaradio.c
+src/channel.c
+src/channel.h
+src/eggtrayicon.c
+src/eggtrayicon.h
+src/gstplay.c
+src/gstplay.h
+src/sitelist.h
